force-app/main/default/objects/ssot__ContactPointAddress__dlm/fields/ssot__BestTimeToContactTimezoneId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BestTimeToContactTimezoneId__c</fullName>
    <label>Best Time to Contact Timezone</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BestTimeToContactTimezoneId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>