force-app/main/default/objects/ssot__ContactPointAddress__dlm/fields/ssot__CountyRegion__c.field-meta.xml
<CustomField>
    <fullName>ssot__CountyRegion__c</fullName>
    <label>[DoNotUse]Country Region</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CountyRegion</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>