force-app/main/default/objects/ssot__ContactPointAddress__dlm/fields/ssot__CreationEventObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__CreationEventObject__c</fullName>
    <label>Creation Event Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CreationEventObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>