force-app/main/default/objects/ssot__ContactPointAddress__dlm/fields/ssot__GeoAccuracy__c.field-meta.xml
<CustomField>
    <fullName>ssot__GeoAccuracy__c</fullName>
    <label>Geo Accuracy</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GeoAccuracy</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>