force-app/main/default/objects/ssot__ContactPointAddress__dlm/fields/ssot__GeocodeAccuracyType__c.field-meta.xml
<CustomField>
    <fullName>ssot__GeocodeAccuracyType__c</fullName>
    <label>Geocode Accuracy Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GeocodeAccuracyType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>