force-app/main/default/objects/ssot__ContactPointAddress__dlm/fields/ssot__IsUsedforMailing__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsUsedforMailing__c</fullName>
    <label>Is Used for Mailing</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsUsedforMailing</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>