force-app/main/default/objects/ssot__ContactPointAddress__dlm/fields/ssot__IsUsedForShipping__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsUsedForShipping__c</fullName>
    <label>Is Used For Shipping</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsUsedForShipping</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>