force-app/main/default/objects/ssot__ContactPointAddress__dlm/fields/ssot__PhysicalLocationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PhysicalLocationId__c</fullName>
    <label>Physical Location</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PhysicalLocationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>