force-app/main/default/objects/ssot__ContactPointAddress__dlm/fields/ssot__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__PostalCode__c</fullName>
    <label>[DoNotUse]Postal Code</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PostalCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>