force-app/main/default/objects/ssot__ContactPointAddress__dlm/fields/ssot__ProfileFirstCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProfileFirstCreatedDate__c</fullName>
    <label>Profile First Created Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProfileFirstCreatedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>