force-app/main/default/objects/ssot__ContactPointAddress__dlm/fields/ssot__rel_1697761157876_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761157876_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactPointAddress_ContactPhoneId_m_rel</label>
    <referenceTo>ssot__ContactPointPhone__dlm</referenceTo>
    <relationshipLabel>ContactPointAddress_ContactPhoneId_m_rel</relationshipLabel>
    <relationshipName>rel_1697761157876_end</relationshipName>
    <type>Lookup</type>
</CustomField>