force-app/main/default/objects/ssot__ContactPointAddress__dlm/fields/ssot__rel_1697761159567_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761159567_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactPointAddress_PartyId_map_Indi_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>ContactPointAddress_PartyId_map_Indi_rel</relationshipLabel>
    <relationshipName>rel_1697761159567_end</relationshipName>
    <type>Lookup</type>
</CustomField>