force-app/main/default/objects/ssot__ContactPointAddress__dlm/fields/ssot__TimezoneCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__TimezoneCode__c</fullName>
    <label>Timezone Code</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TimezoneCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>